# MyWebViewer

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  DarkStyle.cpp  DarkStyle.h  MyWebViewer.qrc  mainwindow.cpp  mainwindow.h  serverinterface.cpp  serverinterface.h
src/res/: cfg.ini
viewer/: CMakeLists.txt  main.cpp
